--- a/CSS/style-copy.css
+++ b/CSS/style-copy.css
@@ -4,26 +4,35 @@
     --primary-color: #757575;
     --hover-backgroundcolor: #2196F3;
 }
+
 /* main  */
 body {
-    background-color:var(--primary-background-color);
-    color:var(--primary-color);
+    background-color: var(--primary-background-color);
+    color: var(--primary-color);
     font-family: 'Roboto';
     font-style: normal;
-    
+
 }
+
 a {
     text-decoration: none;
 }
-h1,h2,h3,h4 {
-    margin:auto;
+
+h1,
+h2,
+h3,
+h4 {
+    margin: auto;
 }
+
 input {
     border: 0 none;
 }
+
 input:focus {
     outline: none;
 }
+
 /* Стили для обнуления верхних отступов у элементов */
 h1,
 h2,
@@ -34,12 +43,14 @@ h6,
 p {
     margin-top: 0;
 }
+
 /* Класс для обнуления базовых свойств у списков (ul) */
 .list {
     list-style: none;
     padding-left: 0;
     margin: 0;
 }
+
 .link {
     text-decoration: none;
     color: inherit;
@@ -47,6 +58,7 @@ p {
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
+
 /* Свойства для корректного отображения картинок */
 img {
     display: block;
@@ -57,7 +69,7 @@ img {
 /* Пересипользуемые элементы */
 .section-title {
     min-width: 376px;
-    margin-bottom:50px;
+    margin-bottom: 50px;
     font-size: 36px;
     text-align: center;
     letter-spacing: 0.03em;
@@ -65,6 +77,7 @@ img {
     font-weight: 700;
     line-height: 1.17;
 }
+
 .button {
     font-size: 16px;
     line-height: 1.88;
@@ -78,14 +91,6 @@ img {
     cursor: pointer;
     font-weight: 700;
 }
-
-/* header  */
-
-
-.page-header {
-    border-bottom: 1px solid #ECECEC;
-}
-
 .container {
     width: 1200px;
     padding-left: 15px;
@@ -93,43 +98,11 @@ img {
     margin-left: auto;
     margin-right: auto;
 }
-    
-.page-header .container {
-    display: flex;
-    align-items: center;
-}
-.navigation {
-   margin-right:auto
-}
+/* header  */
 
-.navigation-list {
-    display: flex;
-}
-.navigation-list__item {
-    position: relative;
-    padding-top: 32px;
-    padding-bottom: 32px;
-}
-.navigation-list__item:not(:last-child) {
-    margin-right:50px;
-}
-.navigation__link {
-    color: #212121;
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 16px;
-    letter-spacing: 0.02em;
-}
-.navigation-list__item .current::after {
-    content: '';
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    height: 4px;
-    background-color: var(--hover-backgroundcolor);
-    border-radius: 2px;
-}
+
+
+
 .logo {
     font-family: 'Raleway';
     font-weight: 700;
@@ -142,43 +115,12 @@ img {
     padding-bottom: 24px;
     font-style: normal;
 }
+
 .logo--text-decoration {
     color: var(--hover-backgroundcolor);
 }
-.contacts {
-    display: flex;
-    align-items: center;
-    font-weight: 500;
-    font-size: 14px;
-    letter-spacing: 0.02em;
-    color: rgba(117, 117, 117, 1);
-}
-.contacts__link {
-    display: flex;
-    align-items: center;
-}
-.contacts__item:not(:last-child) {
-    margin-right: 30px;
-}
-.link:hover,
-.link:focus,
-.link:active
- {
-    color: var(--hover-backgroundcolor);
-}
-.contacts__icon {
-   fill:var(--primary-color);
-   margin-right: 10px;
-   padding:0;
-   width: 12px;
-   height: 16px;
-   transition: color 2500ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.link:hover .contacts__icon,
-.link:focus .contacts__icon,
-.link:active .contacts__icon {
-    fill: var(--hover-backgroundcolor);
-}
+
+
 
 /* main studio*/
 
@@ -192,16 +134,16 @@ img {
     margin-left: auto;
     margin-right: auto;
     padding-top: 200px;
-    padding-bottom: 200px; 
-    background-image: linear-gradient(to right, 
-    rgba(47, 48, 58, 0.4),
-    rgba(47, 48, 58, 0.4)
-    ), url(../images/header.jpg);
+    padding-bottom: 200px;
+    background-image: linear-gradient(to right,
+            rgba(47, 48, 58, 0.4),
+            rgba(47, 48, 58, 0.4)), url(../images/header.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
 
 }
+
 .hero-section__title {
     width: 696px;
     margin: auto;
@@ -212,6 +154,7 @@ img {
     text-transform: uppercase;
     color: #fff;
 }
+
 .hero-section__button {
     margin-top: 30px;
 }
@@ -221,12 +164,15 @@ img {
     padding-top: 94px;
     padding-bottom: 94px;
 }
+
 .benefits-section__title[hidden] {
     display: none;
 }
+
 .benefits-section__list {
     display: flex;
 }
+
 .benefits-section__icon {
     display: flex;
     justify-content: center;
@@ -237,9 +183,11 @@ img {
     border-radius: 4px;
     margin-bottom: 30px;
 }
+
 .benefits-section__item:not(:last-child) {
     margin-right: 30px;
 }
+
 .benefits-section__item-title {
     margin-bottom: 10px;
     font-weight: 700;
@@ -265,15 +213,19 @@ img {
 .application-section {
     padding-bottom: 94px;
 }
+
 .application-section__list {
-    display: flex; 
+    display: flex;
 }
+
 .application-section__item {
     position: relative;
 }
-.application-section__item:not(:last-child){
+
+.application-section__item:not(:last-child) {
     margin-right: 30px;
 }
+
 .application-section__cards-overlay {
     position: absolute;
     left: 0;
@@ -285,6 +237,7 @@ img {
     align-content: center;
     background-color: rgba(47, 48, 58, 0.8);
 }
+
 .application-section__description {
     font-weight: 700;
     font-size: 14px;
@@ -304,30 +257,36 @@ img {
     padding-top: 94px;
     padding-bottom: 94px;
 }
+
 .team-section__list {
     display: flex;
-    margin-top:50px;
+    margin-top: 50px;
 }
+
 .team-section__item {
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 0px 0px 4px 4px;
 }
+
 .team-section__item:not(:last-child) {
     margin-right: 30px;
 }
+
 .member-data {
     padding-top: 30px;
     padding-bottom: 30px;
     text-align: center;
     background-color: #fff;
 }
+
 .member-data__name {
     font-weight: 500;
     font-size: 16px;
-    line-height: 1.2;   
+    line-height: 1.2;
     letter-spacing: 0.03em;
     color: #212121;
 }
+
 .member-data__function {
     margin-top: 10px;
     margin-bottom: 16;
@@ -335,12 +294,14 @@ img {
     line-height: 1.2;
     letter-spacing: 0.03em;
 }
+
 .social-list {
     display: flex;
     padding-left: 32px;
     padding-right: 32px;
     justify-content: space-between;
 }
+
 .social-list__link {
     display: flex;
     align-items: center;
@@ -351,17 +312,20 @@ img {
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 }
+
 .social-list__icon {
     width: 20px;
     height: 20px;
-    fill:rgba(175, 177, 184, 1);
+    fill: rgba(175, 177, 184, 1);
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-} 
+}
+
 .social-list__link:hover,
 .social-list__link:focus,
 .social-list__link:active {
     background-color: var(--hover-backgroundcolor);
 }
+
 .social-list__link:hover .social-list__icon,
 .social-list__link:focus .social-list__icon,
 .social-list__link:active .social-list__icon {
@@ -374,18 +338,22 @@ img {
     padding-top: 94px;
     padding-bottom: 94px;
 }
+
 .customers-section__list {
     display: flex;
 }
+
 .customers-section__item:not(:last-child) {
     margin-right: 30px;
 }
+
 .customers-section__icon {
     width: 106px;
     height: 92px;
     fill: rgba(175, 177, 184, 1);
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
 .customers-section__link {
     display: flex;
     width: 170px;
@@ -397,11 +365,13 @@ img {
     justify-content: center;
     transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
 .customers-section__link:hover .customers-section__icon,
 .customers-section__link:focus .customers-section__icon,
 .customers-section__link:active .customers-section__icon {
     fill: var(--hover-backgroundcolor);
-} 
+}
+
 .customers-section__link:hover,
 .customers-section__link:focus,
 .customers-section__link:active {
@@ -413,6 +383,7 @@ img {
 .footer-section .container {
     display: flex;
 }
+
 .adress__location {
     margin-top: 20px;
     margin-bottom: 9px;
@@ -423,24 +394,28 @@ img {
     font-size: 14px;
     line-height: 1.71;
     letter-spacing: 0.03em;
-    
+
 }
+
 .logo--footer {
     color: #fff;
     padding: 0;
     margin: 0;
 }
+
 .adress__item {
     font-weight: 400;
     font-size: 14px;
-    line-height: 1.71;   
+    line-height: 1.71;
     letter-spacing: 0.03em;
     color: rgba(255, 255, 255, 0.6);
     font-style: normal;
 }
+
 .adress__item:not(:last-child) {
     margin-bottom: 9px;
 }
+
 .footer-section__title {
     font-weight: 700;
     font-size: 14px;
@@ -449,10 +424,12 @@ img {
     text-transform: uppercase;
     color: #FFFFFF;
 }
+
 .footer-socials__list {
     display: flex;
     margin-top: 20px;
 }
+
 .footer-socials__link {
     display: flex;
     align-items: center;
@@ -463,11 +440,13 @@ img {
     background-color: rgba(255, 255, 255, 0.1);
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
 .footer-socials__icon {
     width: 20px;
     height: 20px;
     fill: #fff;
 }
+
 .footer-socials__link:hover,
 .footer-socials__link:focus,
 .footer-socials__link:active {
@@ -477,6 +456,7 @@ img {
 .footer-socials__item:not(:last-child) {
     margin-right: 10px;
 }
+
 .footer-socials {
     padding-top: 12px;
     padding-left: 70px;
@@ -484,21 +464,25 @@ img {
 }
 
 .subscribe {
-   padding-top: 12px;
+    padding-top: 12px;
 }
+
 .subscribe__form {
     display: flex;
     align-items: center;
 }
+
 .subsribe__input,
 .subsribe__input::placeholder {
-    color:rgba(255, 255, 255, 0.6);
+    color: rgba(255, 255, 255, 0.6);
 }
+
 .subscribe__button {
     position: relative;
     padding: 0;
     margin-top: 20px;
 }
+
 .subsribe__icon {
     position: absolute;
     top: 50%;
@@ -508,12 +492,14 @@ img {
     height: 24px;
     fill: #fff;
 }
+
 .subscribe__button-text {
     position: absolute;
     top: 50%;
     transform: translateY(-50%);
     left: 29px;
 }
+
 .subsribe__input {
     height: 50px;
     width: 358px;
@@ -528,21 +514,22 @@ img {
 }
 
 /* main portfolio  */
-.main-portfolio {
+.projects-section {
     padding-top: 94px;
     padding-bottom: 94px;
 }
-.buttons-list {
+
+.buttons {
     display: flex;
     justify-content: center;
-    list-style: none;
     margin: 0px 0px 50px;
-    padding: 0;
 }
-.buttons-item:not(:last-child) {
+
+.buttons__item:not(:last-child) {
     margin-right: 8px;
 }
-.button-studio {
+
+.buttons__item--decor {
     transition:
         background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
         color 250ms cubic-bezier(0.4, 0, 0.2, 1),
@@ -562,46 +549,48 @@ img {
 }
 
 
-.button-studio:hover,
-.button-studio:focus,
-.button-studio:active {
-    transition: 
+.buttons__item--decor:hover,
+.buttons__item--decor:focus,
+.buttons__item--decor:active {
+    transition:
         background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
         color 250ms cubic-bezier(0.4, 0, 0.2, 1),
         box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
     background-color: var(--hover-backgroundcolor);
     color: #fff;
-    box-shadow: 
+    box-shadow:
         0px 3px 1px rgba(0, 0, 0, 0.1),
         0px 1px 2px rgba(0, 0, 0, 0.08),
         0px 2px 2px rgba(0, 0, 0, 0.12);
 }
-.projects-list {
-    list-style: none;
+
+.projects-section__list {
     display: flex;
     flex-wrap: wrap;
-    padding: 0;
-    margin: 0;
 }
-.projects-item {
-    /* transition: box-shadow 250mx cubic-bezier(0.4, 0, 0.2, 1); */
+
+.projects-section__item {
     margin-right: 30px;
 }
-.projects-item:nth-child(3n) {
+
+.projects-section__item:nth-child(3n) {
     margin-right: 0;
 }
-.projects-item:nth-child(-n+6) {
+
+.projects-section__item:nth-child(-n+6) {
     margin-bottom: 30px;
 }
-.projects-item:hover,
-.projects-item:focus,
-.projects-item:active {
+
+.projects-section__item:hover,
+.projects-section__item:focus,
+.projects-section__item:active {
     transition: box-shadow 250mx cubic-bezier(0.4, 0, 0.2, 1);
     box-shadow:
         0px 1px 1px rgba(0, 0, 0, 0.12),
         0px 4px 4px rgba(0, 0, 0, 0.06),
         1px 4px 6px rgba(0, 0, 0, 0.16);
 }
+
 .project-card {
     position: relative;
     top: 0;
@@ -609,10 +598,11 @@ img {
     width: 100%;
     height: 294px;
     overflow: hidden;
-    
-   
+
+
 }
-.card-description {
+
+.project-card__description {
     position: absolute;
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
     transform: translateY(100%);
@@ -622,9 +612,10 @@ img {
     height: 100%;
     background: rgba(33, 150, 243, 0.9);
     padding: 63px, 24px;
-    
+
 }
-.card-text {
+
+.project-card__text {
     position: absolute;
     top: 63px;
     left: 24px;
@@ -636,37 +627,45 @@ img {
     color: #FFFFFF;
     margin: 0;
 }
-.projects-item:hover .card-description,
-.projects-item:focus .card-description {
-       transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-       transform: translateY(0);
-   }
-.projects-title {font-weight: 700;
+
+.projects-section__item:hover .project-card__description,
+.projects-section__item:focus .project-card__description {
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transform: translateY(0);
+}
+
+.project-meta {
+    border: 1px solid #EEEEEE;
+    border-top: 0px;
+    padding: 20px 24px;
+    margin-top: 0;
+}
+
+.projects-meta__title {
+    font-weight: 700;
     font-size: 18px;
     line-height: 2.0;
     letter-spacing: 0.06em;
     color: #212121;
 }
- 
 
-.projects-discription {
+
+.projects-meta__description {
     font-size: 16px;
     line-height: 1.88;
     letter-spacing: 0.03em;
     margin-top: 0;
     margin-bottom: 0;
 }
-.border-bg {
-    border: 1px solid #EEEEEE;
-    border-top: 0px;
-    padding: 20px 24px;
-    margin-top: 0;
-}
+
+
+
 .footer-section {
     background-color: #2F303A;
     padding-top: 60px;
     padding-bottom: 60px;
 }
+
 .info .contacts {
     display: block;
     margin-top: 9px;
@@ -684,18 +683,20 @@ img {
     background-color: rgba(0, 0, 0, 0.2);
     transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
 .backdrop.is-hidden {
     transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
     opacity: 0;
     pointer-events: none;
-    
-    
+
+
 }
+
 .modal {
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%,-50%);
+    transform: translate(-50%, -50%);
     min-width: 528px;
     min-height: 581px;
     background: #FFFFFF;
@@ -704,6 +705,7 @@ img {
     padding: 40px;
     transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
 .modal__button-close {
     position: absolute;
     top: 8px;
@@ -717,22 +719,26 @@ img {
     transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 }
+
 .modal__button-close:hover,
 .modal__button-close:focus {
     border-color: var(--hover-backgroundcolor);
     transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
 .modal__button-close:hover .modal__button-close-icon,
 .modal__button-close:focus .modal__button-close-icon {
     fill: var(--hover-backgroundcolor);
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
 .modal__button-close-icon {
     width: 11px;
     height: 11px;
     fill: black;
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
 .modal__title {
     font-weight: 700;
     font-size: 20px;
@@ -742,30 +748,36 @@ img {
     color: #212121;
     margin-bottom: 12px;
 }
+
 .form {
     display: flex;
     flex-direction: column;
 }
+
 .form__label {
     Font-size: 12px;
     Line-height: 1.2;
     Letter-spacing: 1%;
     color: rgba(117, 117, 117, 1);
 }
+
 .form__label-name,
 .form__label-phone,
 .form__label-mail {
     position: relative;
 }
+
 .form__label-phone,
 .form__label-mail,
 .form__label-comment {
     margin-top: 10px;
 }
+
 .form__input--centered {
     position: relative;
     margin-top: 4px;
 }
+
 .form__input {
     /* position: relative; */
     padding: 12px 15px 12px 42px;
@@ -774,17 +786,22 @@ img {
     border: 1px solid rgba(33, 33, 33, 0.2);
     border-radius: 4px;
     transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}.form__input + svg {
+}
+
+.form__input+svg {
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
 .form__input:focus-within {
     border-color: var(--hover-backgroundcolor);
     transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.form__input:focus + svg {
+
+.form__input:focus+svg {
     fill: var(--hover-backgroundcolor);
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
 .form__icon {
     position: absolute;
     top: 50%;
@@ -793,6 +810,7 @@ img {
     height: 13px;
     transform: translateY(-50%);
 }
+
 .form__textarea {
     padding: 12px 16px;
     height: 120px;
@@ -805,31 +823,37 @@ img {
     transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 }
+
 .form__textarea::placeholder {
-    color:rgba(117, 117, 117, 0.5);
+    color: rgba(117, 117, 117, 0.5);
     Font-size: 12px;
     Line-height: 1.2;
     Letter-spacing: 1%;
 }
+
 .form__textarea:focus {
     border-color: var(--hover-backgroundcolor);
     transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
 .form__checkbox {
     display: flex;
 }
-.form__checkbox-label{
+
+.form__checkbox-label {
     /* position: relative; */
     display: flex;
     align-items: center;
     justify-content: center;
     margin-left: 17px;
 }
+
 .form__original-checkbox {
     -webkit-appearance: none;
     -moz-appearance: none;
     -ms-appearance: none;
 }
+
 .form__checkbox-icon {
     width: 16px;
     height: 15px;
@@ -847,21 +871,25 @@ img {
     margin-bottom: 0;
     margin-left: 9px;
 }
+
 .form__conditions-link {
     color: rgba(33, 150, 243, 1);
     text-decoration: underline;
 }
-.form__original-checkbox:focus + .form__checkbox-icon {
+
+.form__original-checkbox:focus+.form__checkbox-icon {
     border-color: var(--hover-backgroundcolor);
 }
-.form__original-checkbox:checked + .form__checkbox-icon {
+
+.form__original-checkbox:checked+.form__checkbox-icon {
     border-color: var(--hover-backgroundcolor);
     background-color: var(--hover-backgroundcolor);
     background-image: url(../images/check.svg);
     background-size: contain;
     background-repeat: no-repeat;
 }
+
 .modal__button--position {
-   margin: 30px 125px 0;
+    margin: 30px 125px 0;
 
 }
