--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -21,7 +21,6 @@
 
 }
 
-
 .adress__item {
     font-weight: 400;
     font-size: 14px;
@@ -29,12 +28,26 @@
     letter-spacing: 0.03em;
     color: rgba(255, 255, 255, 0.6);
     font-style: normal;
+
+    &:not(:last-child) {
+        margin-bottom: 9px;
+    }
+}
+.footer-socials__icon {
+    width: 20px;
+    height: 20px;
+    fill: #fff;
 }
 
-.adress__item:not(:last-child) {
-    margin-bottom: 9px;
+.footer-socials__item:not(:last-child) {
+    margin-right: 10px;
 }
 
+.footer-socials {
+    padding-top: 12px;
+    padding-left: 70px;
+    padding-right: 93px;
+}
 .footer-section__title {
     font-weight: 700;
     font-size: 14px;
@@ -58,28 +71,12 @@
     border-radius: 50%;
     background-color: rgba(255, 255, 255, 0.1);
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
 
-.footer-socials__icon {
-    width: 20px;
-    height: 20px;
-    fill: #fff;
-}
-
-.footer-socials__link:hover,
-.footer-socials__link:focus,
-.footer-socials__link:active {
-    background-color: var(--hover-backgroundcolor);
-}
-
-.footer-socials__item:not(:last-child) {
-    margin-right: 10px;
-}
-
-.footer-socials {
-    padding-top: 12px;
-    padding-left: 70px;
-    padding-right: 93px;
+    &:hover,
+    &:focus,
+    &:active {
+        background-color: var(--hover-backgroundcolor);
+    }
 }
 
 .subscribe {
@@ -90,13 +87,6 @@
     display: flex;
     align-items: center;
 }
-
-.subsribe__input,
-.subsribe__input::placeholder {
-    color: rgba(255, 255, 255, 0.6);
-}
-
-
 
 .subsribe__icon {
     position: absolute;
@@ -120,4 +110,8 @@
     margin-top: 20px;
     margin-right: 12px;
 
+    &,
+    &::placeholder {
+        color: rgba(255, 255, 255, 0.6);
+    }
 }
