--- a/sass/components/_modal-window.scss
+++ b/sass/components/_modal-window.scss
@@ -8,7 +8,6 @@
     transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-
 .modal {
     position: absolute;
     top: 50%;
@@ -35,25 +34,26 @@
     background-color: #fff;
     transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
+    &:hover,
+    &:focus {
+        border-color: var(--hover-backgroundcolor);
+        transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
 }
 
-.modal__button-close:hover,
-.modal__button-close:focus {
-    border-color: var(--hover-backgroundcolor);
-    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
 
-.modal__button-close:hover .modal__button-close-icon,
-.modal__button-close:focus .modal__button-close-icon {
-    fill: var(--hover-backgroundcolor);
-    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
 
 .modal__button-close-icon {
     width: 11px;
     height: 11px;
     fill: black;
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+    .modal__button-close:hover &,
+    .modal__button-close:focus & {
+        fill: var(--hover-backgroundcolor);
+        transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
 }
 
 .modal__title {
@@ -90,11 +90,6 @@
     margin-top: 10px;
 }
 
-.form__input--centered {
-    position: relative;
-    margin-top: 4px;
-}
-
 .form__input {
     padding: 12px 15px 12px 42px;
     height: 40px;
@@ -102,20 +97,24 @@
     border: 1px solid rgba(33, 33, 33, 0.2);
     border-radius: 4px;
     transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
 
-.form__input+svg {
-    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
+    &--centered {
+        position: relative;
+        margin-top: 4px;
+    }
+    &+svg {
+        transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
 
-.form__input:focus-within {
-    border-color: var(--hover-backgroundcolor);
-    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
+    &:focus-within {
+        border-color: var(--hover-backgroundcolor);
+        transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
 
-.form__input:focus+svg {
-    fill: var(--hover-backgroundcolor);
-    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    &:focus+svg {
+        fill: var(--hover-backgroundcolor);
+        transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
 }
 
 .form__icon {
@@ -138,18 +137,17 @@
     outline: none;
     transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-}
+    &::placeholder {
+        color: rgba(117, 117, 117, 0.5);
+        Font-size: 12px;
+        Line-height: 1.2;
+        Letter-spacing: 1%;
+    }
 
-.form__textarea::placeholder {
-    color: rgba(117, 117, 117, 0.5);
-    Font-size: 12px;
-    Line-height: 1.2;
-    Letter-spacing: 1%;
-}
-
-.form__textarea:focus {
-    border-color: var(--hover-backgroundcolor);
-    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    &:focus {
+        border-color: var(--hover-backgroundcolor);
+        transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
 }
 
 .form__checkbox {
@@ -163,17 +161,29 @@
     margin-left: 17px;
 }
 
-.form__original-checkbox {
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    -ms-appearance: none;
-}
-
 .form__checkbox-icon {
     width: 16px;
     height: 15px;
     border: 2px solid #212121;
     border-radius: 2px;
+
+    .form__original-checkbox:focus + & {
+        border-color: var(--hover-backgroundcolor);
+    }
+
+    .form__original-checkbox:checked + & {
+        border-color: var(--hover-backgroundcolor);
+        background-color: var(--hover-backgroundcolor);
+        background-image: url(../images/check.svg);
+        background-size: contain;
+        background-repeat: no-repeat;
+    }
+}
+
+.form__original-checkbox {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    -ms-appearance: none;
 }
 
 .form__conditions {
@@ -192,14 +202,3 @@
     text-decoration: underline;
 }
 
-.form__original-checkbox:focus+.form__checkbox-icon {
-    border-color: var(--hover-backgroundcolor);
-}
-
-.form__original-checkbox:checked+.form__checkbox-icon {
-    border-color: var(--hover-backgroundcolor);
-    background-color: var(--hover-backgroundcolor);
-    background-image: url(../images/check.svg);
-    background-size: contain;
-    background-repeat: no-repeat;
-}
