--- a/sass/components/_page-header.scss
+++ b/sass/components/_page-header.scss
@@ -2,11 +2,6 @@
     border-bottom: 1px solid #ECECEC;
 }
 
-.page-header .container {
-    display: flex;
-    align-items: center;
-}
-
 .navigation {
     margin-right: auto
 }
@@ -19,11 +14,12 @@
     position: relative;
     padding-top: 32px;
     padding-bottom: 32px;
+
+    &:not(:last-child) {
+        margin-right: 50px;
+    }
 }
 
-.navigation-list__item:not(:last-child) {
-    margin-right: 50px;
-}
 
 .navigation__link {
     color: #212121;
@@ -61,12 +57,6 @@
     margin-right: 30px;
 }
 
-.link:hover,
-.link:focus,
-.link:active {
-    color: var(--hover-backgroundcolor);
-}
-
 .contacts__icon {
     fill: var(--primary-color);
     margin-right: 10px;
@@ -74,10 +64,11 @@
     width: 12px;
     height: 16px;
     transition: color 2500ms cubic-bezier(0.4, 0, 0.2, 1);
+
+    .link:hover &,
+    .link:focus &,
+    .link:active & {
+        fill: var(--hover-backgroundcolor);
+    }
 }
 
-.link:hover .contacts__icon,
-.link:focus .contacts__icon,
-.link:active .contacts__icon {
-    fill: var(--hover-backgroundcolor);
-}
