--- a/sass/components/_projects-section.scss
+++ b/sass/components/_projects-section.scss
@@ -15,9 +15,9 @@
 
 .buttons__item--decor {
     transition:
-        background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-        color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-        box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
     font-family: 'Roboto';
     background-color: #F5F4FA;
     font-weight: 500;
@@ -30,22 +30,21 @@
     padding: 6px 22px;
     border: 0;
     border-radius: 4px;
-}
 
-
-.buttons__item--decor:hover,
-.buttons__item--decor:focus,
-.buttons__item--decor:active {
-    transition:
+    &:hover,
+    &:focus,
+    &:active {
+        transition:
         background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
         color 250ms cubic-bezier(0.4, 0, 0.2, 1),
         box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    background-color: var(--hover-backgroundcolor);
-    color: #fff;
-    box-shadow:
-        0px 3px 1px rgba(0, 0, 0, 0.1),
-        0px 1px 2px rgba(0, 0, 0, 0.08),
-        0px 2px 2px rgba(0, 0, 0, 0.12);
+        background-color: var(--hover-backgroundcolor);
+        color: #fff;
+        box-shadow:
+            0px 3px 1px rgba(0, 0, 0, 0.1),
+            0px 1px 2px rgba(0, 0, 0, 0.08),
+            0px 2px 2px rgba(0, 0, 0, 0.12);
+    }
 }
 
 .projects-section__list {
@@ -55,24 +54,24 @@
 
 .projects-section__item {
     margin-right: 30px;
-}
 
-.projects-section__item:nth-child(3n) {
-    margin-right: 0;
-}
+    &:nth-child(3n) {
+        margin-right: 0;
+    }
 
-.projects-section__item:nth-child(-n+6) {
-    margin-bottom: 30px;
-}
+    &:nth-child(-n+6) {
+        margin-bottom: 30px;
+    }
 
-.projects-section__item:hover,
-.projects-section__item:focus,
-.projects-section__item:active {
-    transition: box-shadow 250mx cubic-bezier(0.4, 0, 0.2, 1);
-    box-shadow:
-        0px 1px 1px rgba(0, 0, 0, 0.12),
-        0px 4px 4px rgba(0, 0, 0, 0.06),
-        1px 4px 6px rgba(0, 0, 0, 0.16);
+    &:hover,
+    &:focus,
+    &:active {
+        transition: box-shadow 250mx cubic-bezier(0.4, 0, 0.2, 1);
+        box-shadow:
+            0px 1px 1px rgba(0, 0, 0, 0.12),
+            0px 4px 4px rgba(0, 0, 0, 0.06),
+            1px 4px 6px rgba(0, 0, 0, 0.16);
+    }
 }
 
 .project-card {
@@ -82,8 +81,6 @@
     width: 100%;
     height: 294px;
     overflow: hidden;
-
-
 }
 
 .project-card__description {
@@ -97,6 +94,11 @@
     background: rgba(33, 150, 243, 0.9);
     padding: 63px, 24px;
 
+    .projects-section__item:hover &,
+    .projects-section__item:focus & {
+        transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        transform: translateY(0);
+    }
 }
 
 .project-card__text {
@@ -110,12 +112,6 @@
     letter-spacing: 0.03em;
     color: #FFFFFF;
     margin: 0;
-}
-
-.projects-section__item:hover .project-card__description,
-.projects-section__item:focus .project-card__description {
-    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    transform: translateY(0);
 }
 
 .project-meta {
@@ -132,7 +128,6 @@
     letter-spacing: 0.06em;
     color: #212121;
 }
-
 
 .projects-meta__description {
     font-size: 16px;
