--- a/sass/components/_team-section.scss
+++ b/sass/components/_team-section.scss
@@ -12,10 +12,10 @@
 .team-section__item {
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 0px 0px 4px 4px;
-}
 
-.team-section__item:not(:last-child) {
-    margin-right: 30px;
+    &:not(:last-child) {
+        margin-right: 30px;
+    }
 }
 
 .member-data {
@@ -57,6 +57,11 @@
     border-radius: 50%;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
+    &:hover,
+    &:focus,
+    &:active {
+        background-color: var(--hover-backgroundcolor);
+    }
 }
 
 .social-list__icon {
@@ -64,16 +69,12 @@
     height: 20px;
     fill: rgba(175, 177, 184, 1);
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+    .social-list__link:hover &,
+    .social-list__link:focus &,
+    .social-list__link:active & {
+        fill: #fff;
+    }
 }
 
-.social-list__link:hover,
-.social-list__link:focus,
-.social-list__link:active {
-    background-color: var(--hover-backgroundcolor);
-}
 
-.social-list__link:hover .social-list__icon,
-.social-list__link:focus .social-list__icon,
-.social-list__link:active .social-list__icon {
-    fill: #fff;
-}
